@@ -1,9 +1,7 @@
 package com.example.personal_finance_tracker.app.routes;
 
 import com.example.personal_finance_tracker.app.models.MenuItem;
-import com.example.personal_finance_tracker.app.models.User;
 import com.example.personal_finance_tracker.app.services.MenuItemService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
@@ -11,21 +9,23 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api")
 public class MenuItemController {
 
-    @Autowired
-    private MenuItemService menuItemService;
+    private final MenuItemService menuItemService;
+
+    public MenuItemController(MenuItemService menuItemService) {
+        this.menuItemService = menuItemService;
+    }
 
     @GetMapping("/menu-items")
     public ResponseEntity<List<MenuItem>> getUserMenuItems(Authentication authentication) {
         // Extract roles from the authenticated user
         List<String> roles = authentication.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
         
         // Get menu items filtered by user roles
         List<MenuItem> menuItems = menuItemService.getMenuItemsForRoles(roles);
