@@ -3,7 +3,6 @@ package com.example.personal_finance_tracker.app.services;
 import com.example.personal_finance_tracker.app.models.MenuItem;
 import com.example.personal_finance_tracker.app.repository.MenuItemRepository;
 import jakarta.annotation.PostConstruct;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
@@ -12,8 +11,15 @@ import java.util.List;
 @Service
 public class MenuItemService {
 
-    @Autowired
-    private MenuItemRepository menuItemRepository;
+    private final MenuItemRepository menuItemRepository;
+
+    private static final String ROLE_USER = "ROLE_USER";
+    private static final String ROLE_ADMIN = "ROLE_ADMIN";
+    private static final String ROLE_ACCOUNTANT = "ROLE_ACCOUNTANT";
+
+    public MenuItemService(MenuItemRepository menuItemRepository) {
+        this.menuItemRepository = menuItemRepository;
+    }
 
     public List<MenuItem> getAllMenuItems() {
         return menuItemRepository.findAll();
@@ -49,21 +55,21 @@ public class MenuItemService {
         if (menuItemRepository.count() == 0) {
             List<MenuItem> defaultMenuItems = Arrays.asList(
                 new MenuItem("Dashboard", "/dashboard", "BarChart3", 
-                    Arrays.asList("ROLE_USER", "ROLE_ADMIN", "ROLE_ACCOUNTANT"), 1),
+                    Arrays.asList(ROLE_USER, ROLE_ADMIN, ROLE_ACCOUNTANT), 1),
                 new MenuItem("User Dashboard", "/user-dashboard", "User", 
-                    Arrays.asList("ROLE_USER", "ROLE_ADMIN", "ROLE_ACCOUNTANT"), 2),
-                new MenuItem("Role Management", "/user-role-management", "Users", 
-                    Arrays.asList("ROLE_ADMIN"), 3),
-                new MenuItem("User Transactions", "/user-transactions", "BadgeDollarSign", 
-                    Arrays.asList("ROLE_ADMIN"), 4),
-                new MenuItem("Categories", "/categories", "Tags", 
-                    Arrays.asList("ROLE_ADMIN"), 5),
-                new MenuItem("Accountant Dashboard", "/accountant-dashboard", "BarChart3", 
-                    Arrays.asList("ROLE_ACCOUNTANT"), 6),
+                    Arrays.asList(ROLE_USER, ROLE_ADMIN, ROLE_ACCOUNTANT), 2),
+                new MenuItem("Role Management", "/user-role-management", "Users",
+                        List.of(ROLE_ADMIN), 3),
+                new MenuItem("User Transactions", "/user-transactions", "BadgeDollarSign",
+                        List.of(ROLE_ADMIN), 4),
+                new MenuItem("Categories", "/categories", "Tags",
+                        List.of(ROLE_ADMIN), 5),
+                new MenuItem("Accountant Dashboard", "/accountant-dashboard", "BarChart3",
+                        List.of(ROLE_ACCOUNTANT), 6),
                 new MenuItem("AI Assistant", "/ai-assistant", "MessageCircle", 
-                    Arrays.asList("ROLE_USER", "ROLE_ADMIN", "ROLE_ACCOUNTANT"), 7),
-                new MenuItem("Menu Management", "/menu-management", "Menu", 
-                    Arrays.asList("ROLE_ADMIN"), 8)
+                    Arrays.asList(ROLE_USER, ROLE_ADMIN, ROLE_ACCOUNTANT), 7),
+                new MenuItem("Menu Management", "/menu-management", "Menu",
+                        List.of(ROLE_ADMIN), 8)
             );
             menuItemRepository.saveAll(defaultMenuItems);
         }
